--- a/child/src/index.html
+++ b/child/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>child</title>
+  <title>Social Media</title>
 </head>
 
 <body>
