add base and slicing login page

--- a/mainapp/src/index.html
+++ b/mainapp/src/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>mainapp</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Poppins&display=swap" rel="stylesheet">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-77BS8EW9W0"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -19,6 +22,7 @@
       method: "Google"
     });
   </script>
+  <link rel="shortcut icon" href="https://diarium.telkom.co.id/favicon.ico">
 </head>
 
 <body>
