--- a/child/src/index.html
+++ b/child/src/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="manifest" href="manifest.json" />
+    <link rel="shortcut icon" href="https://diarium.telkom.co.id/favicon.ico">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+    <title>Social Media</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>child</title>
-</head>
-
-<body>
-  <div id="app"></div>
-</body>
-
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
