add pwa and env

--- a/mainapp/src/index.html
+++ b/mainapp/src/index.html
@@ -22,7 +22,9 @@
       method: "Google"
     });
   </script>
-  <link rel="shortcut icon" href="https://diarium.telkom.co.id/favicon.ico">
+   <link rel="manifest" href="manifest.json" />
+   <link rel="shortcut icon" href="https://diarium.telkom.co.id/favicon.ico">
+   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 </head>
 
 <body>
